# sub_api

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: USAGE.en.md  USAGE.ko.md
examples/: direct_call.py  smoke_direct_client.py
src/sub_api/: __init__.py  cli.py
src/sub_api/core/: __init__.py  client.py  concurrency.py  config.py  errors.py  modeling.py  schema.py
src/sub_api/core/backends/: __init__.py  base.py  claude.py  codex.py  gemini.py
src/sub_api/server/: main.py
src/sub_api/server/routers/: chat.py
